# roboutils

./: README.md  pyproject.toml
src/roboutils/: click_coord.py  collect_ros_rgbd.py  crop_image.py  depth_to_pcd.py  farthest_grasps.py  fit_plane.py  icp_regis.py  mask_to_bbox.py  new_crop_image.py  open3d_tensorboard_vis.py  preprocess_data_dirs.py  project_pts.py  render_partial_pcd.py  transform_pts.py  transform_to_camera_link_tf.py
src/roboutils/assets/CPF_anchor/: demo_mano_pose.pkl  mano_verts_mapping.pkl
src/roboutils/assets/mano/: demo_mano_pose.pkl
src/roboutils/hand_recon/: aIK.py  cpf_hand_region.py  mano.py  mano_api.py
src/roboutils/ho3d/: HO3D.py  HO3DSeq.py  eval.py
src/roboutils/proj_llm_robot/: env.txt  pose_rep.py  pose_transform.py
src/roboutils/ros/: pcd_msg.py
src/roboutils/vis/: grasp.py  o3d_coord.py  viser_grasp.py
src/roboutils/visual_loc/: adjust_K_after_crop.py  pad_resize.py  queryer.py  solve_RT.py  vis_image_matching.py
