[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roboutils"
version = "0.0.1"
authors = [
  { name="red0orange", email="huangdehao919@gmail.com" },
]
description = "Utils function for robot projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.11"',
]

[project.urls]
Homepage = "https://github.com/red0orange/roboutils"
Issues = "https://github.com/red0orange/roboutils/issues"